# OddyseyServer1-

./: CMakeLists.txt  List.h  Oddysey_server.cpp  Oddysey_server.h  README.md  server
DataBase/: Query.cpp  Query.h  Userdata.cpp  Userdata.h  database.json
